--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <h1>I'm Abhinav and this is the root of my websit</h1>
     </header>
     <main>
+        <a href="itis3135/">Click here to go to my ITIS 3135 page</a>
+
         <li>Apple</li>
         <li>Banana</li>
         <li>Orange</li>
