--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>I'm Abhinav and this is the root of my websit</h1>
+        <h1>I'm Abhinav and this is the root of my Website</h1>
     </header>
     <main>
         <a href="itis3135/">Click here to go to my ITIS 3135 page</a>
