--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITIS3135</title>
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>I am Abhinav and this is my ITIS3135 Course Page</h1>
