--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
 </head>
 <body>
     <header>
-        <h1>I'm Abhinav and this is the root of my Website</h1>
+        <h1>Abhinav Keesara</h1>
     </header>
     <main>
-        <a href="itis3135/">Click here to go to my ITIS 3135 page</a>
+        <h2>Home</h2>
+        <p>I'm Abhinav and this is the root of my Website</p>
+        <a href="introduction.html">Click here to go to my ITIS 3135 page</a>
     </main>
     <footer>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur non repudiandae distinctio autem et modi inventore voluptas, commodi, adipisci veniam, quo aperiam. Quod hic ut amet soluta eaque. Ea, cupiditate.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas distinctio aperiam doloremque iure aliquam. Asperiores repellat veritatis non corporis ipsum reprehenderit! Neque ea expedita velit minima perspiciatis sequi unde numquam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum molestiae accusamus dolore. Ducimus, consequatur. Nobis molestiae suscipit, dolorem facilis veritatis sit ipsa sequi doloremque sapiente quis nisi aliquid laboriosam adipisci?</p>
+    <a href="itis3135/">ITIS3135</a> |
+    <a href="https://github.com/akeesar1">GitHub</a> |
+    <a href="https://webpages.charlotte.edu/akeesar1/">CLT Web</a> |
+    <a href="https://akeesar1.github.io">GitHub.io</a> |
+    <a href="https://www.linkedin.com/in/abhinav-975243239/">LinkedIn</a>
+</footer>
 
-    </footer>
 </body>
 </html>
