--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
     <header>
         <h1>Abhinav Keesara</h1>
     </header>
+    <nav>
+    <a href="index.html">Home</a> |
+    <a href="introduction.html">Introduction</a> |
+    <a href="contect.html">Contact</a>
+    </nav>
     <main>
         <h2>Home</h2>
         <p>I'm Abhinav and this is the root of my Website</p>
         <a href="introduction.html">Click here to go to my ITIS 3135 page</a>
     </main>
     <footer>
-    <a href="itis3135/">ITIS3135</a> |
-    <a href="https://github.com/akeesar1">GitHub</a> |
-    <a href="https://webpages.charlotte.edu/akeesar1/">CLT Web</a> |
-    <a href="https://akeesar1.github.io">GitHub.io</a> |
-    <a href="https://www.linkedin.com/in/abhinav-975243239/">LinkedIn</a>
-</footer>
+        <a href="itis3135/">ITIS3135</a> |
+        <a href="https://github.com/akeesar1">GitHub</a> |
+        <a href="https://webpages.charlotte.edu/akeesar1/">CLT Web</a> |
+        <a href="https://akeesar1.github.io">GitHub.io</a> |
+        <a href="https://www.linkedin.com/in/abhinav-975243239/">LinkedIn</a>
+    </footer>
 
 </body>
 </html>
