--- a/introduction.html
+++ b/introduction.html
@@ -3,10 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Introduction</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header>Abhinav Keesara | Joyful Bear</header>
+    <nav>
+    <a href="index.html">Home</a> |
+    <a href="introduction.html">Introduction</a> |
+    <a href="contect.html">Contact</a>
+    </nav>
+
+    <main>
+        <h2>Introduction</h2>
+        <figure>
+            <img src = "smthg" alt="Image of my PC">
+            <figcaption>This is a image of my first built PC</figcaption>
+        </figure>
+
+        <p>
+            I am a sophomore here at UNC Charlotte studying Computer Science with a concentration of Cybersecurity. I am excited to learn about HTML and CSS and apply for some certificates.
+        </p>
+
+        <h3>Personal Background</h3>
+    <ul>
+        <li>Age: 19</li>
+        <li>Hobbies: Eating, reading comics of all genres, learning new skills</li>
+        <li>Goal: Improve writing HTML as the semester progresses</li>
+    </ul>
+
+    <h3>Professional Background</h3>
+    <ul>
+        <li>Created a few interesting projects in free time</li>
+        <li>Taught a few people how to code</li>
+    </ul>
+
+    <h3>Academic Background</h3>
+    <ul>
+        <li>Sophomore at UNC Charlotte studying Computer Science (Cybersecurity concentration)</li>
+        <li>Highschool in Cary, North Carolina</li>
+    </ul>
+
+    <h3>Background in Subject</h3>
+    <p>
+        While I am not that good in Front-End, I have some common knowledge on the elements used in HTML and CSS.
+    </p>
+
+    <h3>Primary Work Computer</h3>
+    <p>
+        MacBook Air M4 13-inch used for university.
+    </p>
+
+    <h3>Backup Work Computer and Location Plan</h3>
+    <p>
+        I do not have a backup laptop, but if needed I can take a loaner from the library.
+    </p>
+
+    <h3>Courses I am Taking & Why</h3>
+    <ol>
+        <li>ITSC 3160 - Database Design and Implementation: Required course; interested in learning SQL</li>
+        <li>Math 1242 - Calculus II: Required course</li>
+        <li>ITSC 3135 - Front-End Web Application Development: Required and interesting; I love editing web pages</li>
+        <li>ITIS 3200 - Intro to Info Security & Privacy: Required and interesting; I want to learn security, cryptography, and vulnerabilities</li>
+        <li>Math 2164 - Matrices & Linear Algebra: Required course</li>
+    </ol>
+
+    <h3>Additional Information</h3>
+    <p>I love building PCs.</p>
+
+    <blockquote>
+        “The greatest glory in living lies not in never falling, but in rising every time we fall.”
+        <cite>— Nelson Mandela</cite>
+    </blockquote>
+    </main>
+
+    <footer>
+        <a href="itis3135/">ITIS3135</a> |
+        <a href="https://github.com/akeesar1">GitHub</a> |
+        <a href="https://webpages.charlotte.edu/akeesar1/">CLT Web</a> |
+        <a href="https://akeesar1.github.io">GitHub.io</a> |
+        <a href="https://www.linkedin.com/in/abhinav-975243239/">LinkedIn</a>
+    </footer>
 </body>
 </html>
