--- a/contect.html
+++ b/contect.html
@@ -7,6 +7,12 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <nav>
+    <a href="index.html">Home</a> |
+    <a href="introduction.html">Introduction</a> |
+    <a href="contect.html">Contact</a>
+    </nav>
     
 </body>
 </html>
