--- a/introduction.html
+++ b/introduction.html
@@ -7,11 +7,13 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>Abhinav Keesara | Joyful Bear</header>
+    <header>
+        <h1>Abhinav Keesara | Joyful Bear</h1>
+    </header>
     <nav>
     <a href="index.html">Home</a> |
     <a href="introduction.html">Introduction</a> |
-    <a href="contect.html">Contact</a>
+    <a href="contact.html">Contact</a>
     </nav>
 
     <main>
@@ -78,11 +80,13 @@
     </main>
 
     <footer>
-        <a href="itis3135/">ITIS3135</a> |
-        <a href="https://github.com/akeesar1">GitHub</a> |
-        <a href="https://webpages.charlotte.edu/akeesar1/">CLT Web</a> |
-        <a href="https://akeesar1.github.io">GitHub.io</a> |
-        <a href="https://www.linkedin.com/in/abhinav-975243239/">LinkedIn</a>
+        <nav>
+            <a href="itis3135/">ITIS3135</a> |
+            <a href="https://github.com/akeesar1">GitHub</a> |
+            <a href="https://webpages.charlotte.edu/akeesar1/">CLT Web</a> |
+            <a href="https://akeesar1.github.io">GitHub.io</a> |
+            <a href="https://www.linkedin.com/in/abhinav-975243239/">LinkedIn</a>
+        </nav>
     </footer>
 </body>
 </html>
