--- a/introduction.html
+++ b/introduction.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduction</title>
+    <title>Abhinav Keesara | Joyful Bear | Introduction</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <h1>Abhinav Keesara | Joyful Bear</h1>
-    </header>
+    
     <nav>
-    <a href="index.html">Home</a> |
-    <a href="introduction.html">Introduction</a> |
-    <a href="contact.html">Contact</a>
+        <a href="index.html">Home</a> |
+        <a href="introduction.html">Introduction</a> |
+        <a href="contract.html">Contact</a> |
+        <a href="itis3135/">ITIS3135</a>
     </nav>
+    </header>
 
     <main>
         <h2>Introduction</h2>
@@ -80,13 +82,11 @@
     </main>
 
     <footer>
-        <nav>
-            <a href="itis3135/">ITIS3135</a> |
-            <a href="https://github.com/akeesar1">GitHub</a> |
-            <a href="https://webpages.charlotte.edu/akeesar1/">CLT Web</a> |
-            <a href="https://akeesar1.github.io">GitHub.io</a> |
-            <a href="https://www.linkedin.com/in/abhinav-975243239/">LinkedIn</a>
-        </nav>
+        <a href="itis3135/">ITIS3135</a> |
+        <a href="https://github.com/akeesar1">GitHub</a> |
+        <a href="https://webpages.charlotte.edu/akeesar1/">CLT Web</a> |
+        <a href="https://akeesar1.github.io">GitHub.io</a> |
+        <a href="https://www.linkedin.com/in/abhinav-975243239/">LinkedIn</a>
     </footer>
 </body>
 </html>
