--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ITIS3135</title>
+    <title>Abhinav Keesara's Joyful Bear | ITIS 3135 | Course Home</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>I am Abhinav and this is my ITIS3135 Course Page</h1>
+    <header>
+        <h1>Abhinav Keesara's Joyful Bear | ITIS 3135</h1>
+    
+    <nav>
+        <a href="index.html">Home</a> |
+        <a href="introduction.html">Introduction</a> |
+        <a href="contract.html">Contact</a> |
+        <a href="itis3135/">ITIS3135</a>
+    </nav>
+    </header>
+    <main>
+        <h2>Course Home</h2>
+    </main>
+    <footer>
+        <a href="itis3135/">ITIS3135</a> |
+        <a href="https://github.com/akeesar1">GitHub</a> |
+        <a href="https://webpages.charlotte.edu/akeesar1/">CLT Web</a> |
+        <a href="https://akeesar1.github.io">GitHub.io</a> |
+        <a href="https://www.linkedin.com/in/abhinav-975243239/">LinkedIn</a>
+    </footer>
 </body>
 </html>
