--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <nav>
         <a href="index.html">Home</a> |
         <a href="introduction.html">Introduction</a> |
-        <a href="contract.html">Contact</a> |
+        <a href="contract.html">Contract</a> |
         <a href="itis3135/">ITIS3135</a>
     </nav>
     </header>
     <main>
         <h2>Home</h2>
         <p>I'm Abhinav and this is the root of my Website</p>
-        <a href="introduction.html">Click here to go to my ITIS 3135 page</a>
+        <a href="introduction.html">Click here to go to my Introductiion page</a>
     </main>
     <footer>
         <a href="itis3135/">ITIS3135</a> |
