--- a/introduction.html
+++ b/introduction.html
@@ -13,7 +13,7 @@
     <nav>
         <a href="index.html">Home</a> |
         <a href="introduction.html">Introduction</a> |
-        <a href="contract.html">Contact</a> |
+        <a href="contract.html">Contract</a> |
         <a href="itis3135/">ITIS3135</a>
     </nav>
     </header>
