--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -11,9 +11,9 @@
         <h1>Abhinav Keesara's Joyful Bear | ITIS 3135</h1>
     
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="introduction.html">Introduction</a> |
-        <a href="contract.html">Contract</a> |
+        <a href="../index.html">Home</a> |
+        <a href="../introduction.html">Introduction</a> |
+        <a href="../contract.html">Contract</a> |
         <a href="itis3135/">ITIS3135</a>
     </nav>
     </header>
