--- a/introduction.html
+++ b/introduction.html
@@ -21,7 +21,7 @@
     <main>
         <h2>Introduction</h2>
         <figure>
-            <img src = "smthg" alt="Image of my PC">
+            <img src = "itis3135/images/PC.jpg" alt="Image of my PC" width="300">
             <figcaption>This is a image of my first built PC</figcaption>
         </figure>
 
