--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -14,10 +14,18 @@
     
     <nav>
         <a href="../index.html">Home</a> |
-        <a href="../introduction.html">Introduction</a> |
-        <a href="../contract.html">Contract</a> |
-        <a href="../itis3135/">ITIS3135</a>
-    </nav>
+        <a href="contract.html">Course Contract</a> |
+        <a href="certifications.html">Certifications</a>
+    <br>
+    <br>
+        <a href="crappy.html">CRAPpy Page</a> |
+        <a href="survey.html">Survey</a> |
+        <a href="gallery.html">Gallery</a> |
+        <a href="inventory.html">Inventory</a> |
+        <a href="instructions.html">Instructions</a> |
+        <a href="highlight.html">Highlight</a>
+</nav>
+
     </header>
     <main>
         <h2>Course Home</h2>
