--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -18,7 +18,7 @@
         <a href="certifications.html">Certifications</a>
     <br>
     <br>
-        <a href="crappy.html">CRAPpy Page</a> |
+        <a href="stuff/CRAPpy.htm">CRAPpy Page</a> |
         <a href="survey.html">Survey</a> |
         <a href="gallery.html">Gallery</a> |
         <a href="inventory.html">Inventory</a> |
