--- a/introduction.html
+++ b/introduction.html
@@ -15,7 +15,7 @@
     <nav>
         <a href="index.html">Home</a> |
         <a href="introduction.html">Introduction</a> |
-        <a href="itis3135/">ITIS3135</a>
+        <a href="itis3135/index.html">ITIS3135</a>
     </nav>
     </header>
 
