--- a/itis3135/certifications.html
+++ b/itis3135/certifications.html
@@ -3,25 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abhinav Keesara | Home</title>
+    <title>Certifications</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="default.css">
-
+    <link rel="stylesheet" href="../default.css">
 </head>
 <body>
     <header>
-        <h1>Abhinav Keesara</h1>
+        <h1>Certifications</h1>
+
     
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="introduction.html">Introduction</a> |
-        <a href="itis3135/index.html">ITIS3135</a>
-    </nav>
+        <a href="../index.html">Home</a> |
+        <a href="contract.html">Course Contract</a> |
+        <a href="certifications.html">Certifications</a>
+    <br>
+    <br>
+        <a href="stuff/CRAPpy.htm">CRAPpy Page</a> |
+        <a href="survey.html">Survey</a> |
+        <a href="gallery.html">Gallery</a> |
+        <a href="inventory.html">Inventory</a> |
+        <a href="instructions.html">Instructions</a> |
+        <a href="highlight.html">Highlight</a>
+</nav>
+
     </header>
     <main>
-        <h2>Home</h2>
-        <p>I'm Abhinav and this is the root of my Website</p>
-        <a href="introduction.html">Click here to go to my Introduction page</a>
+        <p>This page will contain my certifications.</p>
     </main>
     <footer>
         <a href="itis3135/">ITIS3135</a> |
@@ -30,6 +37,5 @@
         <a href="https://akeesar1.github.io">GitHub.io</a> |
         <a href="https://www.linkedin.com/in/abhinav-975243239/">LinkedIn</a>
     </footer>
-
 </body>
 </html>
