--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -18,7 +18,7 @@
         <a href="index.html">Home</a> |
         <a href="introduction.html">Introduction</a> |
         <a href="contract.html">Contract</a> |
-        <a href="itis3135/">ITIS3135</a>
+        <a href="index.html">ITIS3135</a>
     </nav>
     </header>
     <main>
