--- a/itis3135/instructions.html
+++ b/itis3135/instructions.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abhinav Keesara's Joyful Bear | ITIS 3135 | Course Home</title>
+    <title>Instructions</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../default.css">
-
 </head>
 <body>
     <header>
-        <h1>Abhinav Keesara's Joyful Bear | ITIS 3135</h1>
+        <h1>Instructions</h1>
+
     
     <nav>
         <a href="../index.html">Home</a> |
@@ -29,8 +29,7 @@
 
     </header>
     <main>
-        <h2>Course Home</h2>
-        <p>Welcome to my ITIS 3135 course site.</p>
+        <p>This page will contain the instructions.</p>
     </main>
     <footer>
         <a href="itis3135/">ITIS3135</a> |
