--- a/itis3135/certifications.html
+++ b/itis3135/certifications.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certifications</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../default.css">
+    <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
     <header>
@@ -15,7 +15,8 @@
     <nav>
         <a href="../index.html">Home</a> |
         <a href="contract.html">Course Contract</a> |
-        <a href="certifications.html">Certifications</a>
+        <a href="certifications.html">Certifications</a> |
+        <a href="index.html">ITIS3135</a>
     <br>
     <br>
         <a href="stuff/CRAPpy.htm">CRAPpy Page</a> |
