--- a/index.html
+++ b/index.html
@@ -23,13 +23,8 @@
         <p>I'm Abhinav and this is the root of my Website</p>
         <a href="introduction.html">Click here to go to my Introduction page</a>
     </main>
-    <footer>
-        <a href="itis3135/">ITIS3135</a> |
-        <a href="https://github.com/akeesar1">GitHub</a> |
-        <a href="https://webpages.charlotte.edu/akeesar1/">CLT Web</a> |
-        <a href="https://akeesar1.github.io">GitHub.io</a> |
-        <a href="https://www.linkedin.com/in/abhinav-975243239/">LinkedIn</a>
-    </footer>
+    <div data-include="itis3135/components/footer.html"></div>
+    <script src="https://cdn.jsdelivr.net/gh/Paul-Browne/HTMLInclude/HTMLInclude.min.js"></script>
 
 </body>
 </html>
