--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -15,26 +15,21 @@
     
 
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="introduction.html">Introduction</a> |
+        <a href="../index.html">Home</a> |
+        <a href="../introduction.html">Introduction</a> |
         <a href="contract.html">Contract</a> |
         <a href="index.html">ITIS3135</a>
     </nav>
     </header>
     <main>
         <p>
-            I, Abhinav Keesara agree to abide by the terms of the course contract in my Spring 2026, ITIS3135, Front-End Web Application Development with my instructor, Professor D.I. von Briesen. I understand that all work that I do on publicly available online tools will be available to the world, and will not put information there that is inappropriate for schoolwork, or that I wish to keep private. I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences. I also understand that given the structure and content of this class it’s possible to find many examples online or even view my classmates code directly. I swear that I will only use these resources to learn, and will not cut and paste code except where I have properly given credit (i.e. external libraries) and never from my classmates. Signed: Abhinav Keesara , 25/01/2026
+        I, Abhinav Keesara agree to abide by the terms of the course contract in my Spring 2026, ITIS3135, Front-End Web Application Development with my instructor, Professor D.I. von Briesen. I understand that all work that I do on publicly available online tools will be available to the world, and will not put information there that is inappropriate for schoolwork, or that I wish to keep private. I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences. I also understand that given the structure and content of this class it’s possible to find many examples online or even view my classmates code directly. I swear that I will only use these resources to learn, and will not cut and paste code except where I have properly given credit (i.e. external libraries) and never from my classmates. Signed: Abhinav Keesara , 25/01/2026
         </p>
     </main>
 
 
-    <footer>
-        <a href="itis3135/">ITIS3135</a> |
-        <a href="https://github.com/akeesar1">GitHub</a> |
-        <a href="https://webpages.charlotte.edu/akeesar1/">CLT Web</a> |
-        <a href="https://akeesar1.github.io">GitHub.io</a> |
-        <a href="https://www.linkedin.com/in/abhinav-975243239/">LinkedIn</a>
-    </footer>
+    <div data-include="components/footer.html"></div>
+    <script src="https://cdn.jsdelivr.net/gh/Paul-Browne/HTMLInclude/HTMLInclude.min.js"></script>
     
 </body>
 </html>
