--- a/itis3135/inventory.html
+++ b/itis3135/inventory.html
@@ -8,35 +8,12 @@
     <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
-    <header>
-        <h1>Inventory</h1>
-
-    
-    <nav>
-        <a href="../index.html">Home</a> |
-        <a href="contract.html">Course Contract</a> |
-        <a href="certifications.html">Certifications</a> |
-        <a href="index.html">ITIS3135</a>
-    <br>
-    <br>
-        <a href="stuff/CRAPpy.htm">CRAPpy Page</a> |
-        <a href="survey.html">Survey</a> |
-        <a href="gallery.html">Gallery</a> |
-        <a href="inventory.html">Inventory</a> |
-        <a href="instructions.html">Instructions</a> |
-        <a href="highlight.html">Highlight</a>
-</nav>
-
-    </header>
+    <div data-include="components/header.html"></div>
     <main>
+        <h2>Inventory</h2>
         <p>This page will contain the inventory.</p>
     </main>
-    <footer>
-        <a href="itis3135/">ITIS3135</a> |
-        <a href="https://github.com/akeesar1">GitHub</a> |
-        <a href="https://webpages.charlotte.edu/akeesar1/">CLT Web</a> |
-        <a href="https://akeesar1.github.io">GitHub.io</a> |
-        <a href="https://www.linkedin.com/in/abhinav-975243239/">LinkedIn</a>
-    </footer>
+    <div data-include="components/footer.html"></div>
+    <script src="https://cdn.jsdelivr.net/gh/Paul-Browne/HTMLInclude/HTMLInclude.min.js"></script>
 </body>
 </html>
