--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -11,6 +11,12 @@
     <div data-include="components/header.html"></div>
     <main>
         <h2>Website Evaluations</h2>
+        <section>
+            <h3>Some good website</h3>
+        </section>
+        <section>
+            <h3>Some bad website</h3>
+        </section>
     </main>
     <div data-include="components/footer.html"></div>
     <script src="https://cdn.jsdelivr.net/gh/Paul-Browne/HTMLInclude/HTMLInclude.min.js"></script>
