--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -19,19 +19,19 @@
             <li>Contrast: It uses strong contrast with large bold headlines and slideshow for new products.</li>
             <li>Repetition: Apple uses the same fonts and color scheme making the website look clean.</li>
             <li>Alignment: Most of the content is alligned very neatly, the text and images line up making it very structured and professional.</li>
-            <li>Proximity: Related items such as product descriptions and prices are grouped logically, preventing confusion and improving readability.</li>
+            <li>Proximity: Product name, price and description are all grouped together with proper spacing, this makes it easy to understand the information.</li>
         </ul>
     </section>
 
     <section>
         <h3>Poorly Designed Website</h3>
 
-        <h3><a href="https://web.archive.org/web/19971015024241/http://wwwvoice.com/bud/bud.html" target="_blank">Angelfire</a></h3>
+        <h3><a href="https://www.yahoo.com" target="_blank">Yahoo</a></h3>
         <ul>
             <li>Contrast: Low contrast between text and background on many pages makes text difficult to read.</li>
             <li>Repetition: Inconsistent use of fonts, colors, and styles; links and headers do not follow a pattern, leading to visual confusion.</li>
             <li>Alignment: Layout feels cluttered.</li>
-            <li>Proximity: Elements like menus, ads, and content are placed too close together, making it feel cluttered and unorganized.</li>
+            <li>Proximity: Ads and content are too close together.</li>
         </ul>
     </section>
     </main>
