--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -12,26 +12,22 @@
     <main>
         <h2>Website Evaluations</h2>
         <section>
-        <h3>Well Designed Website</h3>
-
         <h3><a href="https://www.apple.com" target="_blank">Apple</a></h3>
         <ul>
             <li>Contrast: It uses strong contrast with large bold headlines and slideshow for new products.</li>
             <li>Repetition: Apple uses the same fonts and color scheme making the website look clean.</li>
-            <li>Alignment: Most of the content is alligned very neatly, the text and images line up making it very structured and professional.</li>
+            <li>Alignment: Most of the content is aligned very neatly, the text and images line up making it very structured and professional.</li>
             <li>Proximity: Product name, price and description are all grouped together with proper spacing, this makes it easy to understand the information.</li>
         </ul>
     </section>
 
     <section>
-        <h3>Poorly Designed Website</h3>
-
         <h3><a href="https://www.yahoo.com" target="_blank">Yahoo</a></h3>
         <ul>
-            <li>Contrast: Low contrast between text and background on many pages makes text difficult to read.</li>
-            <li>Repetition: Inconsistent use of fonts, colors, and styles; links and headers do not follow a pattern, leading to visual confusion.</li>
+            <li>Contrast: Too much content on screen makes reading harder.</li>
+            <li>Repetition: Many styles compete visually.</li>
             <li>Alignment: Layout feels cluttered.</li>
-            <li>Proximity: Ads and content are too close together.</li>
+            <li>Proximity: Many elements are too close together.</li>
         </ul>
     </section>
     </main>
